--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,6 +8,7 @@
 
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
+	<!--
       {% for module in site.data.course.modules %}
        {% assign first_post = site.categories[module]|reverse|first %}
        <li class="nav-item py-2{% if page.categories[1] == module %} active{% endif %}">
@@ -16,11 +17,24 @@
          </a>
        </li>
       {% endfor %}
+	-->
 <!--
       <li class="nav-item py-2">
         <a class="nav-link" href="https://www.p2pu.org/en/" target="_blank">Example Link</a>
       </li>
 -->
+	<li class="nav-item py-2">
+		<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/la_importancia_de_nuestros_datos/introduccion/" target="_blank">La importancia de nuestros datos</a>
+	</li>
+	<li class="nav-item py-2">
+		<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/como_nos_rastrean_en_internet/introduccion/" target="_blank">Como nos rastrean en internet</a>
+	</li>
+	<li class="nav-item py-2">
+        <a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/evitando_los_trackers/introduccion/" target="_blank">Evitando los trackers</a>
+    </li>
+	<li class="nav-item py-2">
+        <a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/datos_en_poder_de_las_empresas/introduccion/ target="_blank">Datos en poder de las empresas</a>
+    </li>
     </ul>
   </div>
 </nav>
