--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,16 +24,16 @@
       </li>
 -->
 		<li class="nav-item py-2">
-			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/la_importancia_de_nuestros_datos/introduccion/" target="_blank">La importancia de nuestros datos</a>
+			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/la_importancia_de_nuestros_datos/introduccion/" target="_self">La importancia de nuestros datos</a>
 		</li>
 		<li class="nav-item py-2">
-			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/como_nos_rastrean_en_internet/introduccion/" target="_blank">Como nos rastrean en internet</a>
+			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/como_nos_rastrean_en_internet/introduccion/" target="_self">Como nos rastrean en internet</a>
 		</li>
 		<li class="nav-item py-2">
-			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/evitando_los_trackers/introduccion/" target="_blank">Evitando los trackers</a>
+			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/evitando_los_trackers/introduccion/" target="_self">Evitando los trackers</a>
 		</li>
 		<li class="nav-item py-2">
-			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/datos_en_poder_de_las_empresas/introduccion/ target="_blank">Datos en poder de las empresas</a>
+			<a class="nav-link" href="https://gpatia2.github.io/course-in-a-box/modules/datos_en_poder_de_las_empresas/introduccion/" target="_self">Datos en poder de las empresas</a>
 		</li>
     </ul>
   </div>
