--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -27,7 +27,7 @@
 			<a class="nav-link" href="/course-in-a-box/modules/la_importancia_de_nuestros_datos/introduccion" target="_self">La importancia de nuestros datos</a>
 		</li>
 		<li class="nav-item py-2">
-			<a class="nav-link" href="/course-in-a-box/modules/como_nos_rastrean_en_internet/introduccion" target="_self">Como nos rastrean en internet</a>
+			<a class="nav-link" href="/course-in-a-box/modules/como_nos_rastrean_en_internet/introduccion" target="_self">¿Como nos rastrean en internet?</a>
 		</li>
 		<li class="nav-item py-2">
 			<a class="nav-link" href="/course-in-a-box/modules/evitando_los_trackers/introduccion" target="_self">Evitando los trackers</a>
