--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,7 +36,7 @@
 			<a class="nav-link" href="/course-in-a-box/modules/datos_en_poder_de_las_empresas/introduccion" target="_self">Datos en poder de las empresas</a>
 		</li>
 	    	<li class="nav-item py-2">
-			<a class="nav-link" href="/course-in-a-box/modules/modulofinal/Final" target="_self">Datos en poder de las empresas</a>
+			<a class="nav-link" href="/course-in-a-box/modules/modulofinal/Final" target="_self">Final</a>
 		</li>
     </ul>
   </div>
