--- a/_layouts/course_page.html
+++ b/_layouts/course_page.html
@@ -14,7 +14,7 @@ layout: base
 					<div class="pagination-section col-sm-6">
 				{% if prev %}
 						<div class="title">
-							Previous submodule:
+							Submódulo anterior:
 						</div>
 						<a rel="prev" class="prev" href="{{ site.baseurl }}{{ prev.url }}">
 							{{ prev.title }} </a>
